--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
         <p> <span> không cần</span> </p>
       </div>
 
+      <div class="mhnCtn">
+        <h2>14. Ưu tiên khu vực chụp gì ? </h2>
+        <p> <span> sổ hộ khẩu</span> </p>
+      </div>
+
       <h1> sẽ tổng hợp và cập nhất thêm... </h1>
 
 
