--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
 
       <div class="mhnCtn">
-        <h2>14. Ưu tiên khu vực chụp gì ? </h2>
+        <h2>14. Ưu tiên khu vực thì chụp giấy tờ gì ? </h2>
         <p> <span> sổ hộ khẩu</span> </p>
       </div>
 
