--- a/tailieu.html
+++ b/tailieu.html
@@ -15,7 +15,16 @@
         <br/>
         
     <iframe width="406" height="228" src="https://www.youtube.com/embed/f_hnxPszv9k" title="Hướng dẫn xác nhận nhập học và nhập học vào Trường Đại học Mở Hà Nội năm 2022" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+    </div>
+
+
+    <div class="mhnCtn">
+        <h2>2. Cách ghi hồ sơ lí lịch học sinh, sinh viên </h2>
+        <p>  <a href="https://www.facebook.com/lchsv.sinhhoc.hnue/posts/pfbid02qFxmxKARWHYHv7e9S47TcFojtMA44PmdxdDG7wShUxGJYDNtoUbNrdULRiy8DWLSl"> vô vô link này </a> </p>
+        <br/>
+    </div>
+
+
     
 
   
