--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@
         <p> <span> sổ hộ khẩu</span> </p>
       </div>
 
+      <div class="mhnCtn">
+        <h2>15. hồ sơ trúng tuyển là gì ? </h2>
+        <p> <span> hồ sơ hssv </span> </p>
+      </div>
+
+      <div class="mhnCtn">
+        <h2>16. nghĩa vụ quân sự là giấy gì ? </h2>
+        <p> <span>cầm giấy nhập học </span> ra xã xin giấy nvqs</p>
+      </div>
+
       <h1> sẽ tổng hợp và cập nhất thêm... </h1>
 
 
