--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
         <p> <span>cầm giấy nhập học </span> ra xã xin giấy nvqs</p>
       </div>
 
+      <div class="mhnCtn">
+        <h2>17. giấy báo nhập học là chụp giấy tờ gì? </h2>
+        <p> vô <a href="http://nhaphoc.hou.edu.vn">  http://nhaphoc.hou.edu.vn/ </a>đăng nhập vào sau đó kéo xuống bên dưới có chỗ tải giấy báo nhập học</p>
+        <img src="./img//taigiaybaonhaphoc.png" alt="giaybaonhahoc"> 
+      </div>
+
+
+
+      <div class="mhnCtn">
+        <h2>18. chỗ tổng điểm có tính điểm vùng không ? </h2>
+        <p> <span>không </span> </p>
+      </div>
       <h1> sẽ tổng hợp và cập nhất thêm... </h1>
 
 
