--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
         <h2>18. chỗ tổng điểm có tính điểm vùng không ? </h2>
         <p> <span>không </span> </p>
       </div>
+
+    
+      <div class="mhnCtn">
+        <h2>19. Hồ sơ trúng tuyển cần chụp mấy bản ? </h2>
+        <p> chụp 1 bản gửi lên hệ thống, còn lúc lên trường nộp thì nộp cả 2 bản đó nhé</p>
+      </div>
+
+
+      <br/>
       <h1> sẽ tổng hợp và cập nhất thêm... </h1>
 
 
