--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
       </div>
 
 
+      <div class="mhnCtn">
+        <h2>20. mã xã, phường ghi kiểu gì ? </h2>
+        <p> </p>
+      </div>
+
+      <div class="mhnCtn">
+        <h2>21. ảnh gắn ở hồ sơ lí lịch học sinh sinh viên hơi to có sao không ? </h2>
+        <p> không</p>
+      </div>
+
       <br/>
       <h1> sẽ tổng hợp và cập nhất thêm... </h1>
 
