--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 
 
       <div class="mhnCtn">
-        <h2>20. mã xã, phường ghi kiểu gì ? </h2>
-        <p> </p>
+        <h2>20. mã xã, phường tra không có thì ghi kiểu gì ? </h2>
+        <p> để <span> để trống không phải ghi</span></p>
       </div>
 
       <div class="mhnCtn">
