--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h3> Câu hỏi thường gặp </h3>
             <li class="mhnQT"> <a href="./tailieu.html"> Tài liệu cần quan tâm </a></li>
         </ul>
+        <i> trang web do tân sinh viên làm,  tổng hợp các câu hỏi thường gặp ở nhóm zalo từ những câu trả lời của thầy cô trong nhóm, lưu ý chỉ coi đây là một nguồn tham khảo, hãy hỏi thầy cô trực tiếp để có câu trả lời chắc chắn nhất... </i>
     </header>
     <div class="mhnCtn">
         <h2>1. số thẻ học sinh điền gì ? </h2>
@@ -129,6 +130,12 @@
         <h2>21. ảnh gắn ở hồ sơ lí lịch học sinh sinh viên hơi to có sao không ? </h2>
         <p> không</p>
       </div>
+
+      <div class="mhnCtn">
+        <h2>22. chưa chuẩn bị kịp giấy tờ thì bổ sung sau có được không ? </h2>
+        <p> <span>được </span>nhưng trước 30/09 </p>
+      </div>
+
 
       <br/>
       <h1> sẽ tổng hợp và cập nhất thêm... </h1>
