--- a/tailieu.html
+++ b/tailieu.html
@@ -20,7 +20,13 @@
 
     <div class="mhnCtn">
         <h2>2. Cách ghi hồ sơ lí lịch học sinh, sinh viên </h2>
-        <p>  <a href="https://www.facebook.com/lchsv.sinhhoc.hnue/posts/pfbid02qFxmxKARWHYHv7e9S47TcFojtMA44PmdxdDG7wShUxGJYDNtoUbNrdULRiy8DWLSl"> vô vô link này </a> </p>
+        <p>  <a href="https://www.facebook.com/lchsv.sinhhoc.hnue/posts/pfbid02qFxmxKARWHYHv7e9S47TcFojtMA44PmdxdDG7wShUxGJYDNtoUbNrdULRiy8DWLSl"> ấn vô đây </a> </p>
+        <br/>
+    </div>
+
+    <div class="mhnCtn">
+        <h2>3. Lịch nhập học </h2>
+        <p>  <a href="https://chat.zalo.me/">ấn vô đây </a> </p>
         <br/>
     </div>
 
