--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mở hà nội các câu hỏi</title>
+    <title>mđh ở hà nội các câu hỏi thường gặp</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -135,6 +135,32 @@
         <h2>22. chưa chuẩn bị kịp giấy tờ thì bổ sung sau có được không ? </h2>
         <p> <span>được </span>nhưng trước 30/09 </p>
       </div>
+
+
+
+
+      <div class="mhnCtn">
+        <h2>23. chưa chuẩn bị kịp giấy tờ thì bổ sung sau có được không ? </h2>
+        <p> <span>được </span>nhưng trước 30/09 </p>
+      </div>
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
       <br/>
