--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
       <div class="mhnCtn">
         <h2>16. nghĩa vụ quân sự là giấy gì ? </h2>
-        <p> <span>cầm giấy nhập học </span> ra xã xin giấy nvqs</p>
+        <p> <span>cầm giấy báo nhập học </span> rồi ra xã xin giấy nvqs</p>
       </div>
 
       <div class="mhnCtn">
