--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h3> Câu hỏi thường gặp </h3>
             <li class="mhnQT"> <a href="./tailieu.html"> Tài liệu cần quan tâm </a></li>
         </ul>
-        <i> trang web do tân sinh viên làm,  tổng hợp các câu hỏi thường gặp ở nhóm zalo từ những câu trả lời của thầy cô trong nhóm, lưu ý chỉ coi đây là một nguồn tham khảo, hãy hỏi thầy cô trực tiếp để có câu trả lời chắc chắn nhất... </i>
+        <i> trang web do tân sinh viên làm,  tổng hợp các câu hỏi thường gặp ở nhóm zalo từ những câu trả lời của thầy cô trong nhóm, lưu ý chỉ coi đây là một nguồn tham khảo, hãy hỏi thầy cô trực tiếp để có câu trả lời chắc chắn nhất... à mà trang web này tổng hợp từ câu trả lời của thầy cô mà, nên cũng uy tín đấy </i>
     </header>
     <div class="mhnCtn">
         <h2>1. số thẻ học sinh điền gì ? </h2>
