--- a/index.html
+++ b/index.html
@@ -138,11 +138,12 @@
 
 
 
-
       <div class="mhnCtn">
-        <h2>23. chưa chuẩn bị kịp giấy tờ thì bổ sung sau có được không ? </h2>
-        <p> <span>được </span>nhưng trước 30/09 </p>
+        <h2>23. mã ngành xem ở đâu ? </h2>
+        <p> <a href="https://trangedu.com/truong/vien-dai-hoc-mo-ha-noi/"> https://trangedu.com/truong/vien-dai-hoc-mo-ha-noi/</a> </p>
       </div>
+
+
 
 
 
