--- a/tailieu.html
+++ b/tailieu.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="mhnCtn">
-        <h2>1. Hướng dẫn xác nhận nhập học </h2>
+        <h2>1. Hướng dẫn xác nhận nhập học  và hướng dẫn nộp học phí</h2>
         <p>  <a href="./fil/3343 HD xác nhận nhập học và nhập học (1).pdf"> văn bản hướng dẫn xác nhận nhập học </a> </p>
         <br/>
         
