--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
       </div>
 
 
+      
+
+      <div class="mhnCtn">
+        <h2>24. ưu tiên đối tượng chụp file gì ? </h2>
+        <p>  </p>
+      </div>
+
+
+      div class="mhnCtn">
+        <h2>25. học bạ chụp bản sao hay bản gốc ? </h2>
+        <p> bản gốc, nếu chưa có bản gốc chưa có thì up tạm bản sao công chứng rồi đến ngày 24 cập nhật bản gốc sau </p>
+      </div>
+
+
+
+
+
 
 
 
