--- a/index.html
+++ b/index.html
@@ -148,13 +148,18 @@
 
       <div class="mhnCtn">
         <h2>24. ưu tiên đối tượng chụp file gì ? </h2>
-        <p>  </p>
+        <p> không phải con thương binh bệnh binh thì không có gì để chụp</p>
       </div>
 
 
-      div class="mhnCtn">
+      <div class="mhnCtn">
         <h2>25. học bạ chụp bản sao hay bản gốc ? </h2>
         <p> bản gốc, nếu chưa có bản gốc chưa có thì up tạm bản sao công chứng rồi đến ngày 24 cập nhật bản gốc sau </p>
+      </div>
+
+      <div class="mhnCtn">
+        <h2>26. ảnh dùng để nhập học có cần giống với ảnh nộp hồ sơ cứng không ? </h2>
+        <p>  </p>
       </div>
 
 
