--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
         <p>  </p>
       </div>
 
+      <div class="mhnCtn">
+        <h2>27. chụp sổ hộ khẩu là chụp bản gốc ạ ? </h2>
+        <p> uh  </p>
+      </div>
+
 
 
 
