--- a/index.html
+++ b/index.html
@@ -167,6 +167,18 @@
         <p> uh  </p>
       </div>
 
+      <h2>28. số học sinh ở trang đầu hồ sơ học sinh, sinh viên điền gì </h2>
+      <p>  </p>
+    </div>
+
+
+
+
+    <div class="mhnCtn">
+        <h2>29. khu vực tuyển sinh điền gì? </h2>
+        <p> hí sinh thuộc khu vực nào điền khu vực đó, giống giấy báo dự thi: 1; 2; 2NT, 3 </p>
+      </div>
+    </div>
 
 
 
