--- a/index.html
+++ b/index.html
@@ -174,10 +174,17 @@
 
 
 
-
     <div class="mhnCtn">
         <h2>29. khu vực tuyển sinh điền gì? </h2>
         <p> thí sinh thuộc khu vực nào điền khu vực đó, giống giấy báo dự thi: 1; 2; 2NT, 3 </p>
+      </div>
+    </div>
+
+
+
+    <div class="mhnCtn">
+        <h2>30. mã vạch phiếu điểm là gì, lấy ở đâu ?</h2>
+        <p> lấy tại giấy chứng nhận kết quả thi kì thi tốt nghiệp thpt năm 2022</p>
       </div>
     </div>
 
