--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       <div class="mhnCtn">
         <h2>15. hồ sơ trúng tuyển là gì ? </h2>
-        <p> <span> hồ sơ hssv </span> </p>
+        <p> <span> hồ sơ lí lịch học sinh sinh viên </span> </p>
       </div>
 
       <div class="mhnCtn">
