--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <div class="mhnCtn">
         <h2>21. ảnh gắn ở hồ sơ lí lịch học sinh sinh viên hơi to có sao không ? </h2>
-        <p> không</p>
+        <p> không cứ đúng 4x6 và không quá 3 tháng từ khi chụp</p>
       </div>
 
       <div class="mhnCtn">
