--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 
       <br/>
-      <h1> sẽ tổng hợp và cập nhất thêm... </h1>
+      <h1> sẽ tổng hợp và cập nhật thêm... </h1>
 
 
 </body>
