--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
       </div>
     </div>
 
+    <div class="mhnCtn">
+      <h2>30. điểm thưởng có phải điểm khu vực không > </h2>
+      <p> không, điểm thưởng là tổng tất cả các điểm cộng của thí sinh bao gồm: điểm ưu tiên theo khu vực / đối tượng + điểm ưu tiên xét tuyển (diện HSG, KHKT, QG) và chứng chỉ tiếng anh quốc tế) Thí sinh có thể bỏ qua nếu không có điểm thưởng</p>
+    </div>
+  </div>
+
+
 
 
    
