--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <div class="mhnCtn">
         <h2>6. trường hợp không thể thuê trọ  ? </h2>
-        <p> hiện ktx <span> Mĩ Đình</span> có thể đón mn qua ở, Tuy Nhiên <span> khuyến khích ở ghép cùng bạn học </span>và <span>quá xa trường </span>để tiện đi lại </p>
+        <p> hiện ktx <span> Mĩ Đình</span> có thể đón mn qua ở, Tuy Nhiên <span> khuyến khích ở ghép cùng bạn học </span>và không<span> quá xa trường </span>để tiện đi lại </p>
       </div>
 
 
