--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="mhnCtn">
-        <h2>4. số thẻ học sinh sinh viên không đủ ô ghi làm sao ? </h2>
+        <h2>4. số thẻ học sinh sinh viên không đủ ô ghi thì làm sao ? </h2>
         <p> ghi <span> tràn ra</span> </p>
       </div>
 
@@ -124,7 +124,7 @@
 
       <div class="mhnCtn">
         <h2>20. mã xã, phường tra không có thì ghi kiểu gì ? </h2>
-        <p> để <span> để trống không phải ghi</span></p>
+        <p> để <span> trống không phải ghi</span></p>
       </div>
 
       <div class="mhnCtn">
@@ -133,8 +133,8 @@
       </div>
 
       <div class="mhnCtn">
-        <h2>22. chưa chuẩn bị kịp giấy tờ thì bổ sung sau có được không ? </h2>
-        <p> <span>được </span>nhưng trước 30/09 </p>
+        <h2>22. chưa chuẩn bị kịp giấy tờ, tiền học thì bổ sung sau có được không ? </h2>
+        <p> <span>được </span>nhưng phải trước 30/09, cố gắng hoàn thánh sớm để nhỡ xảy ra trục trặc còn có thời gian mà xử lí</p>
       </div>
 
 
@@ -186,6 +186,23 @@
       <p> không, điểm thưởng là tổng tất cả các điểm cộng của thí sinh bao gồm: điểm ưu tiên theo khu vực / đối tượng + điểm ưu tiên xét tuyển (diện HSG, KHKT, QG) và chứng chỉ tiếng anh quốc tế) Thí sinh có thể bỏ qua nếu không có điểm thưởng</p>
     </div>
   </div>
+
+
+  <div class="mhnCtn">
+    <h2>31. để giấy tờ vào trong hồ sơ có được không ? > </h2>
+    <img style="width: 45%" src="./img//modauhssvmodauhssv.jpg" /> 
+
+    <p> </p>
+  </div>
+</div>
+
+
+<div class="mhnCtn">
+  <h2>32. chưa đủ tuổi đi nghĩa vụ, không được gọi đi thì không cần giấy nvqs à  ? > </h2>
+
+  <p> <span>cần chứ</span> nếu ở xã không thông báo làm giấy nvqs thì phải tự mình mang giấy báo nhập học ra ủy ban xã để làm </p>
+</div>
+</div>
 
 
 
