--- a/tailieu.html
+++ b/tailieu.html
@@ -26,7 +26,7 @@
 
     <div class="mhnCtn">
         <h2>3. Lịch nhập học </h2>
-        <p>  <a href="https://chat.zalo.me/">ấn vô đây </a> </p>
+        <p>  <a href="http://nhaphoc.hou.edu.vn/lich-dang-ky">ấn vô đây </a> </p>
         <br/>
     </div>
 
