--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <h2>31. để giấy tờ vào trong hồ sơ có được không ? > </h2>
     <img style="width: 45%" src="./img//modauhssvmodauhssv.jpg" /> 
 
-    <p> </p>
+    <p> <span>có </span> </p>
   </div>
 </div>
 
