--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
 </div>
 </div>
 
+<div class="mhnCtn">
+  <h2>33. Các em nam lưu ý khi ra Ban CHQS xã thì hỏi Chỉ huy trưởng là họ có thẩm quyền cấp mẫu giấy gì nha
+    Có 1 số địa phương Ban CHQS xã chỉ cấp cho giấy xác nhận tạm vắng mặt, Còn giấy ĐK NVQS và giấy di chuyển NVQS là của Ban Chỉ huy QS huyện cấp > </h2>
+</div>
+</div>
 
 
 
