--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
     <div class="mhnCtn">
       <h2>30. điểm thưởng có phải điểm khu vực không > </h2>
-      <p> không, điểm thưởng là tổng tất cả các điểm cộng của thí sinh bao gồm: điểm ưu tiên theo khu vực / đối tượng + điểm ưu tiên xét tuyển (diện HSG, KHKT, QG) và chứng chỉ tiếng anh quốc tế) Thí sinh có thể bỏ qua nếu không có điểm thưởng</p>
+      <p>  điểm thưởng là tổng tất cả các điểm cộng của thí sinh bao gồm: điểm ưu tiên theo khu vực / đối tượng + điểm ưu tiên xét tuyển (diện HSG, KHKT, QG) và chứng chỉ tiếng anh quốc tế) Thí sinh có thể bỏ qua nếu không có điểm thưởng</p>
     </div>
   </div>
 
@@ -207,6 +207,12 @@
 <div class="mhnCtn">
   <h2>33. Các em nam lưu ý khi ra Ban CHQS xã thì hỏi Chỉ huy trưởng là họ có thẩm quyền cấp mẫu giấy gì nha
     Có 1 số địa phương Ban CHQS xã chỉ cấp cho giấy xác nhận tạm vắng mặt, Còn giấy ĐK NVQS và giấy di chuyển NVQS là của Ban Chỉ huy QS huyện cấp  </h2>
+</div>
+</div>
+
+
+<div class="mhnCtn">
+  <h2>34.   </h2>
 </div>
 </div>
 
