--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       <div class="mhnCtn">
         <h2>17. giấy báo nhập học là chụp giấy tờ gì? </h2>
-        <p> giấy báo nhập học bản gốc nhà trường sẽ gửi về cho sinh viên, nếu chưa nhận được thì để  trống khi nào nhận đươc bổ sung sau</p>
+        <p> giấy báo nhập học bản gốc nhà trường sẽ gửi về cho sinh viên, nếu chưa nhận được thì để  trống khi nào nhận đươc bổ xung sau</p>
         <p> tải file giấy báo nhập học thì vô <a href="http://nhaphoc.hou.edu.vn">  http://nhaphoc.hou.edu.vn/ </a>đăng nhập vào sau đó kéo xuống bên dưới có chỗ tải giấy báo nhập học</p>
         <img src="./img//taigiaybaonhaphoc.png" alt="giaybaonhahoc"> 
       </div>
