--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
       <div class="mhnCtn">
         <h2>22. chưa chuẩn bị kịp giấy tờ, tiền học thì bổ sung sau có được không ? </h2>
-        <p> <span>được </span>nhưng phải trước 30/09, cố gắng hoàn thánh sớm để nhỡ xảy ra trục trặc còn có thời gian mà xử lí</p>
+        <p> <span>được </span>nhưng phải trước 30/09, cố gắng hoàn thành sớm để nhỡ xảy ra trục trặc còn có thời gian mà xử lí</p>
       </div>
 
 
