--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
 
       <div class="mhnCtn">
         <h2>26. ảnh dùng để nhập học có cần giống với ảnh nộp hồ sơ cứng không ? </h2>
-        <p>  </p>
+        <p> cùng một người là được, nhưng khuyến khích dùng ảnh giống nhau </p>
       </div>
 
       <div class="mhnCtn">
         <h2>27. chụp sổ hộ khẩu là chụp bản gốc ạ ? </h2>
-        <p> uh  </p>
+        <p> <span> uh  </span> </p>
       </div>
 
       <div class="mhnCtn">
