--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
       <div class="mhnCtn">
       <h2>28. số học sinh ở trang đầu hồ sơ học sinh, sinh viên điền gì </h2>
-      <p>  </p>
+      <p>  đang cập nhật... chưa rõ vấn đề này, hãy hỏi giảng viên trong nhóm zalo</p>
     </div>
 
 
