--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
 
 
 <div class="mhnCtn">
-  <h2>34.   </h2>
+  <h2>34. Tóm tắt quá trình học tập trong hồ sơ lí lịch học sinh sinh viên thì kiếm ở đâu ? </h2>
+  <p> trang trước <span> học bạ </span></p>
 </div>
 </div>
 
