--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
 <div class="mhnCtn">
   <h2>34. Tóm tắt quá trình học tập trong hồ sơ lí lịch học sinh sinh viên thì kiếm ở đâu ? </h2>
-  <p> trang trước <span> học bạ </span></p>
+  <p> trang trước <span> học bạ </span> <i>  chưa được kiểm chứng</i></p>
 </div>
 </div>
 
