--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
 <div class="mhnCtn">
   <h2>34. Tóm tắt quá trình học tập trong hồ sơ lí lịch học sinh sinh viên thì kiếm ở đâu ? </h2>
-  <p> trang trước <span> học bạ </span> <i>  chưa được kiểm chứng</i></p>
+  <p> Bạn chỉ cần ghi nhớ quá trình học tập của bản thân, gồm niên khóa học, tên trường học và địa chỉ trường học. Sau đó, bạn hãy ghi một cách tóm tắt, ngắn gọn vào trong sơ yếu lý lịch của mình. Lưu ý rằng các thông tin trong quá trình học tập cần trung thực, chính xác và không gian dối!</p>
 </div>
 </div>
 
