--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <div class="mhnCtn">
         <h2>3. Đối tượng dự thi trong sơ yếu lí lịch học sinh, sinh viên thì điền gì vô ?</h2>
         <p>  Ghi giống trong giấy báo dự thi <span> thuộc đối tượng nào thì điền đối tượng đó </span>, nếu không  thuộc đối tượng ưu tiên thì để trống </p>
+        <img src="./img//doituongduthi.png" />
       </div>
 
       <div class="mhnCtn">
