--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 
 <div class="mhnCtn">
   <h2>36.về giấy xác nhận đối tượng </h2>
+  <img src="./img/xacnhandoituong.png" />
   <p> 
     - ưu tiên khu vực (hoặc sổ hộ khẩu hoặc học bạ) cái nào ưu tiên cao hơn (nhiều điểm hơn thì chụp)
     - ưu tiên đối tượng là các giấy tờ chứng minh (dân tộc => giấy khai sinh, Biên giới hải đảo, dân tộc => hộ khẩu+khai sinh)
