--- a/index.html
+++ b/index.html
@@ -242,6 +242,15 @@
 
 
 
+<div class="mhnCtn">
+  <h2>37. giấy xác nhận vắng mặt là gì vậy ? </h2>
+  <img src="./img/vangmat.png" />
+</div>
+</div>
+
+
+
+
 
    
 
