--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@
 </div>
 
 
+<div class="mhnCtn">
+  <h2>38.  Em có giấy chứng nhận khuyết tật có phải xin giấy nvqs ko cô? </h2>
+  <img src="./img/khuyetat.png" />
+</div>
+</div>
+
+
+
+
+<!-- <div class="mhnCtn">
+  <h2>38. chỗ em thu hộ khẩu chuyển sang dùng giấy chứng minh khu vực có được không ? </h2>
+  
+</div>
+</div> -->
+
+
 
 
 
