--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
       <div class="mhnCtn">
         <h2>9. học bạ chụp trang nào ? </h2>
+        <img src="img/chupba.png" />
         <p> <span> chụp TỪNG trang </span> rồi tải <span> HẾT lên </span>  </p>
       </div>
 
