--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       
       <div class="mhnCtn">
         <h2>3. Đối tượng dự thi trong sơ yếu lí lịch học sinh, sinh viên thì điền gì vô ?</h2>
-        <p>  Ghi giống trong giấy báo dự thi <span> thuộc đối tượng nào thì điền đối tượng đó </span>, nếu không  thuộc đối tượng ưu tiên thì để trống </p>
+        <p>  Ghi giống trong giấy báo dự thi <span> thuộc đối tượng nào thì điền đối tượng đó </span>, bạn tra google từ khóa đối tượng ưu tiên rồi xem bản thân có thuộc đối tượng nào không, nếu không  thuộc đối tượng ưu tiên thì để trống </p>
+        
         <img src="./img//doituongduthi.png" />
       </div>
 
