--- a/index.html
+++ b/index.html
@@ -257,13 +257,24 @@
 </div>
 </div>
 
+<div class="mhnCtn">
+  <h2>38. hồ sơ xét tuyển là cái gì, kiếm đâu ra  ? </h2>
+  <img src="./img/hosoxettuyen.png" />
+</div>
+</div>
+
+
+
+<!-- 
+
 
 <div class="mhnCtn">
   <h2>39.  Loại tốt nghiệp xem ở đâu? </h2>
   <p> </p>
-  <!-- <img src="./img/khuyetat.png" /> -->
-</div>
-</div>
+   <img src="./img/khuyetat.png" /> -->
+<!-- </div> -->
+<!-- </div> --> -->
+
 
 
 
