--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <div class="mhnCtn">
         <h2>6. trường hợp không thể thuê trọ  ? </h2>
         <p> hiện ktx <span> Mĩ Đình</span> có thể đón mn qua ở, Tuy Nhiên <span> khuyến khích ở ghép cùng bạn học </span>và không<span> quá xa trường </span>để tiện đi lại </p>
+        <img src="./img/ktx.png" />
       </div>
 
 
@@ -263,6 +264,13 @@
 </div>
 </div>
 
+
+
+<div class="mhnCtn">
+  <h2>39. nếu ở mục bằng tốt nghiệp mình chụp giấy chứng nhận tốt nghiệp tạm thời thì ở mục Giấy chứng nhận tốt nghiệp (bản gốc) mk phải chụp cái gì ạ? ? </h2>
+  <img src="." />
+</div>
+</div>
 
 
 <!-- 
