--- a/index.html
+++ b/index.html
@@ -272,6 +272,13 @@
 </div>
 </div>
 
+<div class="mhnCtn">
+  <h2>40. số HS ở trang đầu hồ sơ học sinh, sinh viên ghi gì ?</h2>
+  <p>để trống </p>
+</div>
+</div>
+
+
 
 <!-- 
 
