--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="mhnCtn">
         <h2>1. số thẻ học sinh điền gì ? </h2>
          <p> vào trang <a href="http://nhaphoc.hou.edu.vn/"> http://nhaphoc.hou.edu.vn/</a> đăng nhập vô sẽ có phần <span> Mã hồ sơ </span>  dùng mã hồ sơ đó để viết vô các vị trí sau</p>
-        <img src="./img//modauhssv.jpg" />
+        <img style="width: 45%" src="./img//modauhssv.jpg" />
 
         <p> và phần số thẻ hs, sv nằm ở trang thứ 2 trong tờ khai lí lịch sinh viên (phía dưới sô chứng minh thư, thẻ căn cước)</p>
         
