--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          <p> vào trang <a href="http://nhaphoc.hou.edu.vn/"> http://nhaphoc.hou.edu.vn/</a> đăng nhập vô sẽ có phần <span> Mã hồ sơ </span>  dùng mã hồ sơ đó để viết vô các vị trí sau</p>
         <img style="width: 45%" src="./img//modauhssv.jpg" />
 
-        <p> và phần số thẻ hs, sv nằm ở trang thứ 2 trong tờ khai lí lịch sinh viên (phía dưới sô chứng minh thư, thẻ căn cước)</p>
+        <p> và phần <span> số thẻ hs, sv </span> nằm ở trang thứ 2 trong <span>tờ khai lí lịch sinh viên  </span>(phía dưới sô chứng minh thư, thẻ căn cước)</p>
         
       </div>
       
