--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
 
 
 
-<div class="mhnCtn">
+<!-- <div class="mhnCtn">
   <h2>39. nếu ở mục bằng tốt nghiệp mình chụp giấy chứng nhận tốt nghiệp tạm thời thì ở mục Giấy chứng nhận tốt nghiệp (bản gốc) mk phải chụp cái gì ạ? ? </h2>
-  <img src="." />
+  <p> </p>
 </div>
-</div>
+</div> -->
 
 <div class="mhnCtn">
   <h2>40. số HS ở trang đầu hồ sơ học sinh, sinh viên ghi gì ?</h2>
