--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
       </div>
 
       <div class="mhnCtn">
-      <h2>28. số học sinh ở trang đầu hồ sơ học sinh, sinh viên điền gì </h2>
-      <p>  đang cập nhật... chưa rõ vấn đề này, hãy hỏi giảng viên trong nhóm zalo</p>
+      <h2>28. số HS ở trang đầu hồ sơ học sinh, sinh viên điền gì </h2>
+      <p>  <span>để trống </span></p>
     </div>
 
 
