--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <div class="mhnCtn">
         <h2>29. khu vực tuyển sinh điền gì? </h2>
-        <p> thí sinh thuộc khu vực nào điền khu vực đó, giống giấy báo dự thi: 1; 2; 2NT, 3 </p>
+        <p> thí sinh thuộc khu vực nào điền khu vực đó, giống như lúc điền tronggiấy báo dự thi:khu vực  1, khu vực 2; khu vực 2NT, khu vực 3. </p>
       </div>
     </div>
 
