--- a/index.html
+++ b/index.html
@@ -277,11 +277,6 @@
 </div>
 </div> -->
 
-<div class="mhnCtn">
-  <h2>40. số HS ở trang đầu hồ sơ học sinh, sinh viên ghi gì ?</h2>
-  <p>để trống </p>
-</div>
-</div>
 
 
 
@@ -293,7 +288,7 @@
   <p> </p>
    <img src="./img/khuyetat.png" /> -->
 <!-- </div> -->
-<!-- </div> --> -->
+<!-- </div> --> 
 
 
 
