--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 <div class="mhnCtn">
   <h2>35. nơi cấp cccd ở đâu ? </h2>
-  <p>  <span> cục trưởng cục cảnh sát quản lí hành chính về trật tự xã hội </span></p>
+  <p>  <span> Cục cảnh sát quản lí hành chính về trật tự xã hội </span></p>
 </div>
 </div>
 
@@ -264,18 +264,17 @@
 </div>
 
 <div class="mhnCtn">
-  <h2>38. hồ sơ xét tuyển là cái gì, kiếm đâu ra  ? </h2>
+  <h2>39. hồ sơ xét tuyển là cái gì, kiếm đâu ra  ? </h2>
   <img src="./img/hosoxettuyen.png" />
 </div>
 </div>
 
 
 
-<!-- <div class="mhnCtn">
-  <h2>39. nếu ở mục bằng tốt nghiệp mình chụp giấy chứng nhận tốt nghiệp tạm thời thì ở mục Giấy chứng nhận tốt nghiệp (bản gốc) mk phải chụp cái gì ạ? ? </h2>
-  <p> </p>
+<div class="mhnCtn">
+  <h2>40. phiếu điểm là gì ?</h2>
+  giấy chứng nhận kết quả thi kì thi tốt nghiệp thpt năm 2022 
 </div>
-</div> -->
 
 
 
